--- a/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst_prod.panda_queueconfig.json
@@ -1012,15 +1012,13 @@
       "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
-          "nCoreFactor": 8,
-          "activateWorkerFactor": 0.125,
           "noPilotsWhenNoActiveJobs": false,
           "ceQueueName": "EL9",
           "ceARCGridType": "arc",
           "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
           "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
                          "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_srun.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
   },
 
@@ -1042,8 +1040,6 @@
       "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
-          "nCoreFactor": 8,
-          "activateWorkerFactor": 0.125,
           "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "EL9",
@@ -1051,7 +1047,7 @@
           "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
           "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
                          "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_srun.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
   },
 
@@ -1073,8 +1069,6 @@
     "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
-          "nCoreFactor": 4,
-          "activateWorkerFactor": 0.25,
           "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "EL9",
@@ -1082,7 +1076,7 @@
           "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
           "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
                          "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_srun.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
   },
 
@@ -1104,8 +1098,6 @@
     "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
-          "nCoreFactor": 2,
-          "activateWorkerFactor": 0.5,
           "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "EL9",
@@ -1113,7 +1105,7 @@
           "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
           "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
                          "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_srun.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
   },
 
@@ -1135,8 +1127,6 @@
     "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
-          "nCoreFactor": 1,
-          "activateWorkerFactor": 1.0,
           "noPilotsWhenNoActiveJobs": false,
           "submitMode": "PULL",
           "ceQueueName": "EL9",
@@ -1144,7 +1134,7 @@
           "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
           "ceEndpoint": ["https://arc-ce01.gridpp.rl.ac.uk:443/arex/rest/1.0",
                          "https://arc-ce02.gridpp.rl.ac.uk:443/arex/rest/1.0"],
-          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull_srun.sdf"
+          "templateFile": "/opt/harvester/sandbox/lsst_prod.submit_pilot_pull.sdf"
       }
   },
 
