--- a/helm/panda/values.yaml
+++ b/helm/panda/values.yaml
@@ -18,6 +18,14 @@ jedi:
   #persistentvolume:
   #    selector: false
 
+  resources:
+    limits:
+      cpu: 4000m
+      memory: 16Gi
+    requests:
+      cpu: 4000m
+      memory: 16Gi
+
 server:
   # enable the PanDA server
   enabled: true
@@ -68,6 +76,14 @@ server:
   # rucio account
   # rucioAccount: iddsv1
 
+  resources:
+    limits:
+      cpu: 4000m
+      memory: 16Gi
+    requests:
+      cpu: 4000m
+      memory: 16Gi
+
 postgres:
   # enable the database
   enabled: true
@@ -80,3 +96,11 @@ postgres:
   # PV with selector support
   #persistentvolume:
   #    selector: false
+
+  resources:
+    limits:
+      cpu: 4000m
+      memory: 16Gi
+    requests:
+      cpu: 4000m
+      memory: 16Gi
