--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -6,6 +6,7 @@ metadata:
   name: {{ include "secrets.fullname" . }}-panda-envs
 type: Opaque
 stringData:
+  PANDA_DB_BACKEND: "{{ .Values.panda.database.backend | default "postgres"}}"
   PANDA_DB_PASSWORD: {{ .Values.panda.database.password }}
   PANDA_DB_HOST: "{{ .Values.panda.database.dbhost | default (printf "%s-postgres" (include "panda_ref" .)) }}"
   PANDA_DB_PORT: "{{ .Values.panda.database.dbport }}"
