--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -51,6 +51,7 @@ panda:
   enabled: true
 
   database:
+    backend: "postgres" # or oraclex
     password: "FIXME"
     # set hostname only when using an external database
     dbhost: ""
