Add support for Oracle in the config of Bigmon

--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -107,6 +107,8 @@ bigmon:
   base_url: "FIXME"
 
   hostname: "FIXME"
+  deployment: "FIXME" # Either "ORACLE_ATLAS" or "ORACLE_DOMA" or "POSTGRES"
+
   numWSGI: "10"
   vo: "FIXME"
   secretKey: "FIXME"
