Add support for Oracle in the config of Bigmon

--- a/secrets/templates/bigmon.yaml
+++ b/secrets/templates/bigmon.yaml
@@ -18,6 +18,7 @@ stringData:
   BIGMON_SECRET_KEY: "{{ .Values.bigmon.secretKey }}"
   BIGMON_VO: "{{ .Values.bigmon.vo }}"
   BIGMON_DEPLOYMENT: "{{ .Values.bigmon.deployment | default "POSTGRES" }}"
+  BIGMON_DB_ACCESS: "{{ .Values.bigmon.dbaccess | default "dbaccess_postgres" }}"
   PRMON_LOGS_DIRECTIO_LOCATION: "{{ .Values.bigmon.prmonLocation }}"
   {{- if .Values.bigmon.debugMode }}
   BIGMON_DEBUG: "True"
