--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -108,6 +108,7 @@ bigmon:
 
   hostname: "FIXME"
   deployment: "FIXME" # Either "ORACLE_ATLAS" or "ORACLE_DOMA" or "POSTGRES"
+  dbaccess: "FIXME" # Either "dbaccess_oracle_atlas" or "dbaccess_oracle_doma" or "dbaccess_postgres"
 
   numWSGI: "10"
   vo: "FIXME"
