Pass the schema names in the secrets, if missing use the DOMA ones by default

--- a/helm/panda/charts/jedi/panda_jedi_config.json
+++ b/helm/panda/charts/jedi/panda_jedi_config.json
@@ -1,12 +1,14 @@
 {
     "db": {
-        "backend": "postgres",
+        "backend": "$PANDA_DB_BACKEND",
         "dbhost": "$PANDA_DB_HOST",
         "dbport": "$PANDA_DB_PORT",
         "dbpasswd": "$PANDA_DB_PASSWORD",
-	"dbuser": "$PANDA_DB_USER",
-	"dbname": "$PANDA_DB_NAME",
-	"nWorkers": "5"
+	    "dbuser": "$PANDA_DB_USER",
+	    "dbname": "$PANDA_DB_NAME",
+        "schemaJEDI": "$PANDA_DB_SCHEMAJEDI",
+        "schemaDEFT": "$PANDA_DB_SCHEMADEFT",
+	    "nWorkers": "5"
     },
     "ddm": {
         "modConfig": "wlcg:4:pandajedi.jediddm.GenDDMClient:GenDDMClient::off,wlcg:2:pandajedi.jediddm.AtlasDDMClient:AtlasDDMClient:sphenix",
