--- a/helm/panda/charts/server/panda_server_config.json
+++ b/helm/panda/charts/server/panda_server_config.json
@@ -7,8 +7,10 @@
         "CRIC_URL_SITES": "$PANDA_CRIC_SITES",
         "adder_plugins": "wlcg:dataservice.AdderDummyPlugin:AdderDummyPlugin", 
         "backend": "postgres",
-        "schemaPANDA": "doma_panda",
-        "schemaMETA": "doma_pandameta",
+        "schemaPANDA": "$PANDA_DB_SCHEMAPANDA",
+        "schemaMETA": "$PANDA_DB_SCHEMAMETA",
+        "schemaPANDAARCH": "$PANDA_DB_SCHEMAPANDAARCH",
+        "schemaJEDI": "$PANDA_DB_SCHEMAJEDI",
         "configurator_use_cert": "False",
         "production_dns": "iddssv1",
         "pserveralias": "panda-dev-server",
