--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -13,6 +13,12 @@ stringData:
   PANDA_DB_USER: "{{ .Values.panda.database.user | default "panda" }}"
   PANDA_DB_NAME: "{{ .Values.panda.database.name | default "panda_db" }}"
 
+  PANDA_DB_SCHEMAPANDA: "{{ .Values.panda.database.schemapanda | default "DOMA_PANDA" }}"
+  PANDA_DB_SCHEMAMETA: "{{ .Values.panda.database.schemameta | default "DOMA_PANDAMETA" }}"
+  PANDA_DB_SCHEMAPANDAARCH: "{{ .Values.panda.database.schemapandaarch | default "DOMA_PANDAARCH" }}"
+  PANDA_DB_SCHEMAJEDI: "{{ .Values.panda.database.schemajedi | default "DOMA_PANDA" }}"
+  PANDA_DB_SCHEMADEFT: "{{ .Values.panda.database.schemadeft | default "DOMA_DEFT" }}"
+
   PANDA_URL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.port }}/server/panda"
   PANDA_URL_SSL: "https://{{ include "panda_ref" . }}-server:{{ .Values.panda.sslPort }}/server/panda"
   PANDA_BEHIND_REAL_LB: "1"
