dev harvester to use loki realtime logging

--- a/helm/harvester/charts/mariadb/templates/statefulset.yaml
+++ b/helm/harvester/charts/mariadb/templates/statefulset.yaml
@@ -47,6 +47,7 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  serviceName: {{ include "mariadb.fullname" . }}
   selector:
     matchLabels:
       {{- include "mariadb.selectorLabels" . | nindent 6 }}
