moved darkside stuff to doma.init-harvester

--- a/secrets/templates/panda.yaml
+++ b/secrets/templates/panda.yaml
@@ -91,8 +91,16 @@ metadata:
 type: Opaque
 stringData:
   {{- range $client := .Values.auth.oidc.clients }}
+  {{- $config_url := $.Values.auth.oidc.config_url }}
+  {{- if $client.config_url }}
+  {{- $config_url = $client.config_url }}
+  {{- end }}
+  {{- $audience := $.Values.auth.oidc.audience }}
+  {{- if $client.audience }}
+  {{- $audience = $client.audience }}
+  {{- end }}
   {{ $client.name }}_auth_config.json: |-
-    {{ $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ROBOT_IDS" $client.robot_ids | replace "ID" $client.client_id | replace "SECRET" $client.client_secret | replace "URL" $.Values.auth.oidc.config_url | replace "AUDIENCE" $.Values.auth.oidc.audience  | replace "NAME" $client.name }}
+    {{ $.Files.Get "files/panda_auths/auth_config.json.template" | replace "ROBOT_IDS" $client.robot_ids | replace "ID" $client.client_id | replace "SECRET" $client.client_secret | replace "URL" $config_url | replace "AUDIENCE" $audience  | replace "NAME" $client.name }}
   {{ end }}
 
 ---
