--- a/secrets/values.yaml
+++ b/secrets/values.yaml
@@ -11,6 +11,7 @@ auth:
   authVO: "panda_dev"
 
   oidc:
+    # default audience and config_url
     audience: "https://pandaserver-doma.cern.ch"
     config_url: "https://panda-iam-doma.cern.ch/.well-known/openid-configuration"
     clients:
@@ -18,6 +19,9 @@ auth:
         client_id: "FIXME"
         client_secret: "FIXME"
         robot_ids: "FIXME"
+        # override default audience and config_url if needed
+        audience: "https://pandaserver-doma.cern.ch"
+        config_url: "https://panda-iam-doma.cern.ch/.well-known/openid-configuration"
       - name: "Rubin"
         client_id: "FIXME"
         client_secret: "FIXME"
