add idds live probe

--- a/helm/idds/charts/rest/templates/statefulset.yaml
+++ b/helm/idds/charts/rest/templates/statefulset.yaml
@@ -85,6 +85,13 @@ spec:
               runuser -u atlpan -g zp -- /opt/idds/bin/start-daemon.sh all
               {{- end}}
           {{ end -}}
+          livenessProbe:
+            exec:
+              command:
+                - cat
+                - /var/log/idds/idds_health
+            initialDelaySeconds: 600
+            periodSeconds: 600
           ports:
             - name: https
               containerPort: 8443
