--- a/helm/idds/charts/rest/idds_configmap.json
+++ b/helm/idds/charts/rest/idds_configmap.json
@@ -27,7 +27,8 @@
                                                       "username": "${IDDS_RECEIVER_USERNAME}",
                                                       "password": "${IDDS_RECEIVER_PASSWORD}",
                                                       "broker_timeout": 600}},
-	     "domapandawork.poll_panda_jobs_chunk_size": 2000
+	     "domapandawork.poll_panda_jobs_chunk_size": 2000,
+	     "domapandawork.site_to_cloud": "SLAC:US,LANCS:EU,CC-IN2P3:EU,RAL:EU"
 	    },
          "conductor":
             {"threshold_to_release_messages": 1000,
