--- a/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
+++ b/helm/harvester/charts/harvester/queueconfig/lsst.panda_queueconfig.json
@@ -1014,7 +1014,7 @@
       "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
-          "noPilotsWhenNoActiveJobs": false,
+          "noPilotsWhenNoActiveJobs": true,
           "ceQueueName": "EL9",
           "ceARCGridType": "arc",
 	  "ceHostname": ["arc-ce01.gridpp.rl.ac.uk", "arc-ce02.gridpp.rl.ac.uk"],
@@ -1042,7 +1042,7 @@
       "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
-          "noPilotsWhenNoActiveJobs": false,
+          "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
 	  "ceQueueName": "EL9",
           "ceARCGridType": "arc",
@@ -1071,7 +1071,7 @@
     "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
-          "noPilotsWhenNoActiveJobs": false,
+          "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
 	  "ceQueueName": "EL9",
           "ceARCGridType": "arc",
@@ -1100,7 +1100,7 @@
     "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
-          "noPilotsWhenNoActiveJobs": false,
+          "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
 	  "ceQueueName": "EL9",
           "ceARCGridType": "arc",
@@ -1129,7 +1129,7 @@
     "submitter": {
           "nCore": 1,
           "nCorePerNode": 1,
-          "noPilotsWhenNoActiveJobs": false,
+          "noPilotsWhenNoActiveJobs": true,
           "submitMode": "PULL",
 	  "ceQueueName": "EL9",
           "ceARCGridType": "arc",
