add harvester live probe

--- a/helm/harvester/charts/harvester/templates/statefulset.yaml
+++ b/helm/harvester/charts/harvester/templates/statefulset.yaml
@@ -180,6 +180,13 @@ spec:
             {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          livenessProbe:
+            exec:
+              command:
+                - cat
+                - /var/log/panda/harvester_healthy
+            initialDelaySeconds: 1800
+            periodSeconds: 600
           {{- if .Values.autoStart }}
           command: ["/bin/sh", "-c"]
           args:
