update production dn to assign priority to panda_dev.pilot oidc token

--- a/helm/panda/charts/server/panda_server_config.json
+++ b/helm/panda/charts/server/panda_server_config.json
@@ -13,7 +13,8 @@
         "schemaPANDAARCH": "$PANDA_DB_SCHEMAPANDAARCH",
         "schemaJEDI": "$PANDA_DB_SCHEMAJEDI",
         "configurator_use_cert": "False",
-        "production_dns": "iddssv1",
+        "production_dns": "iddssv1,Robot,Pilot",
+	"pilot_owners": "pilot",
         "pserveralias": "panda-dev-server",
         "pserverhost": "$PANDA_HOSTNAME",
         "pserverport": "443",
