--- a/helm/panda/values.yaml
+++ b/helm/panda/values.yaml
@@ -33,6 +33,7 @@ server:
   # container image and tag
   image:
     tag: "0.4.2"
+    # tag: "0.5.3"
     # tag: "master"
 
   # PV with selector support
