--- a/helm/idds/charts/rest/idds_configmap.json
+++ b/helm/idds/charts/rest/idds_configmap.json
@@ -10,6 +10,10 @@
              "echo": 0,
              "pool_reset_on_return": "rollback"
             },
+	 "rest":
+	    {"max_request_data_length": 1000000,
+             "additional_storage": "/data/idds-requests/panda_jobs/panda/idds-requests"
+	    },
 	 "clerk":
 	    {"cache_expire_seconds": 300},
 	 "carrier":
@@ -28,7 +32,14 @@
                                                       "password": "${IDDS_RECEIVER_PASSWORD}",
                                                       "broker_timeout": 600}},
 	     "domapandawork.poll_panda_jobs_chunk_size": 2000,
-	     "domapandawork.site_to_cloud": "SLAC:US,LANCS:EU,CC-IN2P3:EU,RAL:EU"
+	     "domapandawork.site_to_cloud": "SLAC:US,LANCS:EU,CC-IN2P3:EU,RAL:EU",
+	     "domapandawork.additional_task_parameters": {},
+	     "domapandawork.additional_task_parameters_per_site": {"SLAC": {"noLoopingCheck": 1}},
+             "domapandawork.core_to_queues": {"1": {"queues": ["Rubin", "Rubin_Extra_Himem"], "processing_type": ""},
+                                              "Rubin_Multi": {"queues": ["Rubin_Multi"], "processing_type": "Rubin_Multi"},
+                                              "Rubin_Merge": {"queues": ["Rubin_Merge"], "processing_type": "Rubin_Merge"},
+                                              "any": {"queues": ["Rubin_Multi"], "processing_type": "Rubin_Multi"}}
+
 	    },
          "conductor":
             {"threshold_to_release_messages": 1000,
