--- a/helm/harvester/charts/harvester/panda_harvester_configmap.json
+++ b/helm/harvester/charts/harvester/panda_harvester_configmap.json
@@ -30,6 +30,8 @@
     "auth_origin": "${PANDA_AUTH_VO}",
     "pandaURL": "${PANDA_URL_SSL}",
     "pandaURLSSL": "${PANDA_URL_SSL}",
+    "cache_api_url_ssl": "${PANDA_URL_SSL}",
+    "server_api_url_ssl": "${PANDA_URL_SSL}",
     "verbose": true
   },
   "apfmon": {
