--- a/helm/iam/values/values-lsst.yaml
+++ b/helm/iam/values/values-lsst.yaml
@@ -4,7 +4,8 @@ main:
       repository: indigoiam/iam-login-service
       pullPolicy: Always
       # tag: "v1.8.1"
-      tag: "v1.8.4"
+      # tag: "v1.8.4"
+      tag: "v1.10.2"
 
   # PV: For use cases that users are not allowed to create PV,
   # please update class to corresponding storageclass and update create to false.
